# confluence-mcp

./: .gitignore  README.md  pyproject.toml
src/confluence_mcp/: __init__.py  client.py  content.py  server.py
tests/: test_client.py  test_content.py  test_e2e.py
tmp/: full-page.md  section-update.md  test-page.md  test-upload.txt
tmp/tree-download/: 000_[MCP-TEST]_Live_MCP_E2E_Test.md  001_[MCP-TEST]_Child_Page.md
